fix: page nav spacing

--- a/services/web-app/components/page-nav/page-nav.module.scss
+++ b/services/web-app/components/page-nav/page-nav.module.scss
@@ -18,7 +18,6 @@
   @include breakpoint.breakpoint(lg) {
     position: sticky;
     top: calc(spacing.$spacing-11 + spacing.$spacing-10);
-    margin-top: spacing.$spacing-11;
   }
 }
 
@@ -56,8 +55,8 @@
     width: 100%;
     height: 32px;
     align-items: center;
-    padding-left: spacing.$spacing-05;
-    border-left: 4px solid theme.$border-subtle;
+    padding-left: calc(spacing.$spacing-06 - spacing.$spacing-02);
+    border-left: spacing.$spacing-02 solid theme.$border-subtle;
     color: theme.$text-secondary;
     font-weight: normal;
     text-decoration: none;
